--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -19,7 +19,7 @@
       <tr>
         <td><%= bookmark.venue.name %></td>
         <td><%= bookmark.username.email %></td>
-        <td><%= bookmark.dish_id %></td>
+        <td><%= bookmark.dish.id %></td>
         <td>
           <a href="/bookmarks/<%= bookmark.id %>" class="btn btn-primary">Show</a>
           <a href="/bookmarks/<%= bookmark.id %>/edit" class="btn btn-warning">Edit</a>
