Automatically associate comment to signed in user

--- a/app/views/bookmarks/new.html.erb
+++ b/app/views/bookmarks/new.html.erb
@@ -28,13 +28,7 @@
       </div>
 
       <!-- Label and input for username_id -->
-      <div class="form-group">
-        <label for="username_id" class="control-label">
-          Username
-        </label>
-
-        <%= select_tag(:username_id, options_from_collection_for_select(Username.all, :id, :email, @bookmark.username_id), :class => "form-control") %>
-      </div>
+      <input type="hidden" name="username_id" value="<%= current_user.id %>">
 
       <!-- Label and input for dish_id -->
       <div class="form-group">
