--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -6,13 +6,31 @@
   <div class="col-md-12 mb-2">
     <dl class="dl-horizontal">
       <dt>Venue</dt>
-      <dd><%= @bookmark.venue_id %></dd>
+      <dd>
+        <% if @bookmark.venue.present? %>
+          <a href="/venues/<%= @bookmark.venue_id %>">
+            <%= @bookmark.venue.name %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Username</dt>
-      <dd><%= @bookmark.username_id %></dd>
+      <dd>
+        <% if @bookmark.username.present? %>
+          <a href="/usernames/<%= @bookmark.username_id %>">
+            <%= @bookmark.username.email %>
+          </a>
+        <% end %>
+      </dd>
 
       <dt>Dish</dt>
-      <dd><%= @bookmark.dish_id %></dd>
+      <dd>
+        <% if @bookmark.dish.present? %>
+          <a href="/dishes/<%= @bookmark.dish_id %>">
+            <%= @bookmark.dish.id %>
+          </a>
+        <% end %>
+      </dd>
 
     </dl>
 
